fixed alignment issue with desktop view, but the dropdown menu in mobile needs to be centered, and might need to adjust when it is triggered in the media query.

--- a/src/app/my/my.component.scss
+++ b/src/app/my/my.component.scss
@@ -1,34 +1,50 @@
 #my-banner {
     width: 100%;
-    height: 208px;
-    background-color: mediumaquamarine;
+    // height: 208px;
+    background-color: #1C1E20;
     display: flex;
     justify-content: center;
     align-content: center;
+    box-sizing: border-box;
+    padding: 80px 16px;
+
+    @media screen and (max-width: 450px) {
+        padding: 40px 16px;
+    }
 
     h1 {
+        font: 900 40px/48px "Oculus Sans Bold", "Arial", "Helvetica", sans-serif;
         font-weight: 900;
         font-size: 40px;
         color: white;
-        margin-top: 75px;
+        // margin-top: 75px;
+        margin: 0;
+
+        @media screen and (max-width: 450px) {
+            font-size: 22px;
+        }
     }
 }
 
 #my-container {
     width: 100%;
-    background-color: steelblue;
+    background-color: #fff;
     overflow: hidden;
 }
 #my-container-content {
     width: 1228px;
-    background-color: mediumpurple;
+    background-color: #fff;
     margin: 0 auto;
 }
 #my-menu {
     width: 25%;
     float: left;
-    background-color: rosybrown;
+    background-color: #fff;
     padding-top: 48px;
+
+    @media screen and (max-width: 1024px) {
+        padding: 32px 16px 0;
+    }
 
     ul {
         list-style: none;
@@ -37,7 +53,7 @@
 
         li {
             font-size: 16px;
-            color: black;
+            color: #1C1E20;
             font-weight: 400;
             margin-bottom: 16px;
         }
@@ -51,8 +67,10 @@
         border: 1px solid #a4a5a6;
         margin: 0 auto;
 
+        font-family: "Oculus Sans", "Arial", "Helvetica", sans-serif;
         line-height: 24px;
         color: #323436;
+        background-color: #fff;
         font-size: 16px;
         font-weight: 400;
     }
@@ -64,8 +82,8 @@
 @media (max-width: 900px){
     #my-menu {
         width: 100%;
-        float: none;
-        padding-bottom: 35px;
+        float: left;
+        // padding-bottom: 35px;
 
         ul {
             display: none;
